<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pascalhow.travellog.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="-15sp"
            android:drawableTop="@drawable/ic_camera_white"
            android:gravity="center"
            android:paddingTop="15sp"
            android:text=""
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageView_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_fragment_picture" />

        <TextView
            android:id="@+id/textView_caption_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/image_caption_title"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_imageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:singleLine="false"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText_imageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/camera_image_description_edit_text_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:visibility="gone" />

        <Button
            android:id="@+id/camera_button_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/ic_edit"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/camera_image_description_edit_button_text"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/camera_button_saveImageDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_done"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/camera_image_description_save_button_text"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/camera_button_cancelImageDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_clear"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/camera_image_description_cancel_button_text"
                android:textColor="@android:color/white"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
